sumo/tests/jtrrouter/errors/unknown_vType_ignore/errors.jtrrouter
Warning: The vehicle type 'foo' for flow '0' is not known.
Warning: No route input specified or all routes were invalid.
